Table product {
  id uuid [primary key]

  name varchar(255)
  company_name varchar(255)
  price decimal
  quantity integer

  employee_to_role_id uuid [ref: > employee_to_role.id]
}

Table employee_to_role {
  id uuid [primary key]
  role_id uuid [ref: > role.id]
  employee_id uuid [ref: > employee.id]
  date_of_admission date
  date_of_dismissal date
  salary decimal
}

Table employee {
  id uuid [primary key]

  full_name varchar(255)

  supervisor_id uuid [ref: > employee.id]
}

Table role {
  id uuid [primary key]
  name varchar(128)
}

Table employee_info {
  employee_id uuid [primary key, ref: - employee.id]

  iin varchar(128)
  pasport varchar(128)
  date_of_birth timestamp

  phone_number varchar(128)

  login varchar(255)
  password varchar(255)
}

Table payment_order {
  id uuid [primary key]

  date timestamp

  total_sum decimal

  bank_id varchar(255)
  employee_to_role_id uuid [ref: > employee_to_role.id]
}

Table order_item {
  id uuid [primary key]
  payment_id uuid [ref: > payment_order.id]
  product_id uuid [ref: > product.id]
  quantity integer
}


